--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.1.1",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.18.0",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "zod": "^3.23.8"
